Updated css, index.js, and html

--- a/templates/partials/home.html
+++ b/templates/partials/home.html
@@ -16,7 +16,7 @@
               </div>
             </div>
             <br />
-            <button id="getUrl" class="button is-block is-fullwidth is-primary is-medium is-rounded" type="submit">
+            <button id="getUrl" class="button is-block is-fullwidth is-blue is-medium is-rounded" type="submit">
               Get URL
             </button>
           </form>
@@ -28,6 +28,7 @@
   <style>
       html, body {
     height: 100%;
+    background: hsl(166, 67%, 51%);
 }
 html {
     display: table;
