--- a/templates/partials/signup.html
+++ b/templates/partials/signup.html
@@ -84,7 +84,7 @@
   <style>
     :root {
       --brandColor: hsl(166, 67%, 51%);
-      --background: rgb(247, 247, 247);
+      --background: hsl(166, 67%, 51%);
       --textDark: hsla(0, 0%, 0%, 0.66);
       --textLight: hsla(0, 0%, 0%, 0.33);
     }
@@ -101,7 +101,7 @@
 
     .register {
       margin-top: 10rem;
-      background: white;
+      background: hsl(0, 0%, 100%);
       border-radius: 10px;
     }
 
