--- a/templates/partials/login.html
+++ b/templates/partials/login.html
@@ -4,7 +4,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <body>
     <div id="login">
-        <h3 class="text-center text-white pt-5">Short & Sweet</h3>
+        <h1 class="text-center text-white pt-5">Short & Sweet URL Shortener</h1>
         <div class="container">
             <div id="login-row" class="row justify-content-center align-items-center">
                 <div id="login-column" class="col-md-6">
